--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,15 +1,18 @@
 version: '3'
 services:
   web:
+    container_name: web
     build: .
     ports:
       - 6543:6543
     volumes:
-      - ./build:/golang/src/rt-demo/
+      - .:/code
     stdin_open: true
     tty: true
+
   postgres:
     image: postgres
+    container_name: postgres
     ports:
       - 5432:5432
     healthcheck:
